--- a/scripts/main.css
+++ b/scripts/main.css
@@ -60,6 +60,11 @@ h4 {
     text-align: center;
     font-family: Dodger;
 }
+div.fluid-container p {
+	text-align:justify;
+	padding-left:150px;
+	padding-right:150px;
+}
 
 .dropdown-toggle::after {
    transition: transform 0.15s linear; 
